@@ -10,7 +10,7 @@ EndProject
 Project("{2150E333-8FDC-42A3-9474-1A3956D46DE8}") = "documentation", "documentation", "{32079541-68ED-4319-91FB-0FF041642679}"
 	ProjectSection(SolutionItems) = preProject
 		CHANGES.txt = CHANGES.txt
-		COPYING.txt = COPYING.txt
+		LICENSE.txt = LICENSE.txt
 		README.txt = README.txt
 	EndProjectSection
 EndProject
